<package>
  <name>openni_launch</name>
  <version>1.9.1</version>
    <description>
     Launch files to open an OpenNI device and load all nodelets to 
     convert raw depth/RGB/IR streams to depth images, disparity images, 
     and (registered) point clouds.
    </description>
  <author>Patrick Mihelich</author>
  <maintainer email="jkammerl@willowgarage.com">Julius Kammerl</maintainer>
  <license>BSD</license>

  <url type="website">http://www.ros.org/wiki/openni_launch</url>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>depth_image_proc</build_depend>
  <build_depend>image_proc</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>openni_camera</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>depth_image_proc</run_depend>
  <run_depend>image_proc</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>openni_camera</run_depend>
  <run_depend>tf</run_depend>

</package>
